display error messages on code activated panels

--- a/web/index.html
+++ b/web/index.html
@@ -394,7 +394,8 @@
                         Both your email and password will be encrypted and never viewed, transferred or sold in any way.
                     </p>
 
-                    <button type="submit" class="send">Register Account</button>
+                    <p class="bad"></p>
+                    <button type="submit" class="send big">Register Account</button>
                 </form>
             </section>
 
@@ -406,7 +407,8 @@
 
                 <input type="text" class="code" maxlength="5" placeholder="CODE">
 
-                <button class="activate-code">Activate Account</button>
+                <p class="bad"></p>
+                <button class="activate-code big">Activate Account</button>
             </section>
         </div>
 
@@ -434,7 +436,9 @@
                         <input type="password" class="confirm" autocomplete="new-password"
                             placeholder="Confirm new password...">
                     </div>
-                    <button type="submit" class="send">Send Verification Code</button>
+
+                    <p class="bad"></p>
+                    <button type="submit" class="send big">Send Verification Code</button>
                 </form>
             </section>
 
@@ -446,7 +450,8 @@
 
                 <input type="text" class="code" maxlength="5" placeholder="CODE">
 
-                <button class="activate-code">Activate New Password</button>
+                <p class="bad"></p>
+                <button class="activate-code big">Activate New Password</button>
             </section>
         </div>
     </div>
