added password requirements text

--- a/web/index.html
+++ b/web/index.html
@@ -373,18 +373,30 @@
 
             <section class="credentials">
                 <form>
-                    <div class="grid">
-                        Email address
-                        <input type="email" class="email" autocomplete="email"
-                            placeholder="e.g. sweetlilly93@hotmail.com...">
-
-                        Password
-                        <input type="password" class="password" autocomplete="new-password" placeholder="Password...">
-
-                        Password (again)
-                        <input type="password" class="confirm" autocomplete="new-password"
-                            placeholder="Confirm password...">
-                    </div>
+                    <table>
+                        <tr>
+                            <td>Email address</td>
+                            <td><input type="email" class="email" autocomplete="email"
+                                    placeholder="e.g. sweetlilly93@hotmail.com..."></td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">
+                                <p>Your password must consist of at least 8 characters.</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Password</td>
+                            <td>
+                                <input type="password" class="password" autocomplete="new-password"
+                                    placeholder="Password...">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Password (again)</td>
+                            <td><input type="password" class="confirm" autocomplete="new-password"
+                                    placeholder="Confirm password..."></td>
+                        </tr>
+                    </table>
 
                     <p>
                         Your email address is exclusively used for identifying yourself.
@@ -424,18 +436,30 @@
                 </p>
 
                 <form>
-                    <div class="grid">
-                        Email address
-                        <input type="email" class="email" autocomplete="email" placeholder="Email address...">
-
-                        New Password
-                        <input type="password" class="password" autocomplete="new-password"
-                            placeholder="New password...">
-
-                        New Password (again)
-                        <input type="password" class="confirm" autocomplete="new-password"
-                            placeholder="Confirm new password...">
-                    </div>
+                    <table>
+                        <tr>
+                            <td>Email address</td>
+                            <td><input type="email" class="email" autocomplete="email"
+                                    placeholder="e.g. sweetlilly93@hotmail.com..."></td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">
+                                <p>Your password must consist of at least 8 characters.</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Password</td>
+                            <td>
+                                <input type="password" class="password" autocomplete="new-password"
+                                    placeholder="Password...">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Password (again)</td>
+                            <td><input type="password" class="confirm" autocomplete="new-password"
+                                    placeholder="Confirm password..."></td>
+                        </tr>
+                    </table>
 
                     <p class="bad"></p>
                     <button type="submit" class="send big">Send Verification Code</button>
