--- a/web/index.html
+++ b/web/index.html
@@ -113,7 +113,7 @@
                         <span>Grid color:
                             <input id="gridColor" type="color" value="#000000">
                         </span>
-                        <span>Grid Transparency:
+                        <span>Grid transparency:
                             <input id="gridAlpha" type="range" min="0" max="1" step="0.01">
                         </span>
                     </div>
