--- a/web/index.html
+++ b/web/index.html
@@ -315,7 +315,7 @@
                 You're invited to join this session! Enter your name so the Dungeon Master can assign you the right
                 character.
                 <br><br>
-                (This name will be forwarded to the DM only and is not saved anywhere.)
+                (This name will be forwarded to the DM and is not saved anywhere but your machine.)
             </p>
 
             <div>
