display players currently online

--- a/web/index.html
+++ b/web/index.html
@@ -117,7 +117,7 @@
                         <span>Grid color:
                             <input id="gridColor" type="color" value="#000000">
                         </span>
-                        <span>Grid transparency:
+                        <span>Grid opacity:
                             <input id="gridAlpha" type="range" min="0" max="1" step="0.01">
                         </span>
                     </div>
@@ -300,6 +300,7 @@
                         <i class="fas fa-image"></i>
                     </button>
                 </div>
+                <div id="online"></div>
             </div>
             <div id="log"></div>
         </section>
