made measuring tool SVG based

--- a/web/index.html
+++ b/web/index.html
@@ -189,7 +189,7 @@
                     <div id="grid">
                         <div id="movableGhost" class="movable"></div>
                     </div>
-                    <canvas id="distanceCanvas"></canvas>
+                    <svg id="distanceCanvas"></svg>
                     <span id="distanceText" class="hidden"></span>
 
                     <svg id="polymask">
