introduced game chat

--- a/web/index.html
+++ b/web/index.html
@@ -302,7 +302,16 @@
                 </div>
                 <div id="online"></div>
             </div>
-            <div id="log"></div>
+            <div id="log">
+                <div id="messages"></div>
+                <div id="chat">
+                    <textarea cols="30" rows="10" maxlength="3000" placeholder="Chat with other players..."></textarea>
+                    <button class="icon close with-tooltip" disabled>
+                        <i class="fas fa-paper-plane"></i>
+                        <span>Send</span>
+                    </button>
+                </div>
+            </div>
         </section>
     </div>
 
