--- a/web/index.html
+++ b/web/index.html
@@ -209,21 +209,19 @@
                                     from="0" to="21" dur="3s" repeatCount="indefinite" additive="sum" />
                             </pattern>
 
-                            <filter id="outline">
-                                <feMorphology operator="dilate" radius="3" in="SourceGraphic" result="THICKNESS" />
-                                <feComposite operator="out" in="THICKNESS" in2="SourceGraphic"></feComposite>
-                            </filter>
+                            <g id="polyneg"></g>
 
-                            <mask id="polyneg">
+                            <mask id="polynegmask" fill="black">
                                 <rect fill="white"></rect>
+                                <use href="#polyneg"></use>
                             </mask>
                         </defs>
 
-                        <g filter="url(#outline)" fill="#fb8">
-                            <g id="polypos" mask="url(#polyneg)"></g>
-                        </g>
+                        <g id="polypos" class="polypattern" mask="url(#polynegmask)"></g>
 
-                        <use href="#polypos" class="polypattern"></use>
+                        <g id="polynegdisplay">
+                            <use href="#polyneg"></use>
+                        </g>
 
                         <polygon id="polyprev"></polygon>
                     </svg>
