select area of movables by holding ctrl

--- a/web/index.html
+++ b/web/index.html
@@ -201,6 +201,10 @@
                     <svg id="distanceCanvas" class="fill-board"></svg>
                     <span id="distanceText" class="hidden"></span>
 
+                    <svg class="fill-board" style="pointer-events: none;">
+                        <rect id="selectionArea" x="-2000" y="-2000"></rect>
+                    </svg>
+
                     <div id="polymaskWrapper" class="fill-board">
                         <svg id="polymask">
                             <defs>
