display "inherit from prefab" when size is 0

--- a/web/index.html
+++ b/web/index.html
@@ -164,6 +164,7 @@
                         </span>
                         <span>Size:
                             <input id="movableSize" type="number" min="0" max="25" placeholder="Size...">
+                            <span id="sizeInherit">(inherit from prefab)</span>
                         </span>
                         <span class="space-between">
                             Conditions
