display current map index

--- a/web/index.html
+++ b/web/index.html
@@ -242,6 +242,7 @@
                             <i class="fas fa-chevron-left"></i>
                         </button>
                         <input id="mapName" placeholder="Map name..." disabled>
+                        <span id="mapIndex" class="needs-map hidden"></span>
                         <button class="icon dm hidden">
                             <i class="fas fa-check"></i>
                         </button>
