introduced line measuring

--- a/web/index.html
+++ b/web/index.html
@@ -103,6 +103,9 @@
                                 <i class="fas fa-lightbulb" mode="2">
                                     <span>Cone</span>
                                 </i>
+                                <i class="fas fa-highlighter" mode="4">
+                                    <span>Line</span>
+                                </i>
                             </div>
                         </div>
                     </button>
