changed measuring icons

--- a/web/index.html
+++ b/web/index.html
@@ -82,10 +82,6 @@
                         Edit Scene
                         <i class="fas fa-wrench"></i>
                     </button>
-                    <button class="icon toggle dm" id="fogOfWar">
-                        Fog of War
-                        <i class="fas fa-cloud"></i>
-                    </button>
                     <button class="icon tab" id="diceTab">
                         Roll Dice
                         <i class="fas fa-dice-d20"></i>
@@ -93,12 +89,16 @@
                             <table id="dice"></table>
                         </div>
                     </button>
+                    <button class="icon toggle dm" id="fogOfWar">
+                        Fog of War
+                        <i class="fas fa-cloud"></i>
+                    </button>
                     <button class="icon tab toggle" id="measureDistance">
                         Measuring
                         <i class="fas fa-ruler"></i>
                         <div class="content">
                             <div class="toolbox" id="measureTools">
-                                <i class="fas fa-ruler" mode="0">
+                                <i class="fas fa-ruler-combined" mode="0">
                                     <span>Path</span>
                                 </i>
                                 <i class="fas fa-square" mode="3">
@@ -107,10 +107,10 @@
                                 <i class="fas fa-circle" mode="1">
                                     <span>Circle/Sphere</span>
                                 </i>
-                                <i class="fas fa-lightbulb" mode="2">
+                                <i class="fas fa-drafting-compass" mode="2">
                                     <span>Cone</span>
                                 </i>
-                                <i class="fas fa-highlighter" mode="4">
+                                <i class="fas fa-slash" mode="4">
                                     <span>Line</span>
                                 </i>
                             </div>
