more screen size responsiveness

--- a/web/index.html
+++ b/web/index.html
@@ -58,7 +58,7 @@
                 </span>
             </div>
 
-            <div>
+            <div class="stretch-vertical">
                 <h2>Saved Campaigns</h2>
                 <div id="gamesContainer">
                     <button id="create" class="big acc-enable smooth" disabled>Create new campaign</button>
@@ -460,7 +460,7 @@
                         </tr>
                         <tr>
                             <td colspan="2">
-                                <p>Your password must consist of at least 8 characters.</p>
+                                <p>Your password must consist of at least 7 characters.</p>
                             </td>
                         </tr>
                         <tr>
@@ -523,20 +523,20 @@
                         </tr>
                         <tr>
                             <td colspan="2">
-                                <p>Your password must consist of at least 8 characters.</p>
+                                <p>Your password must consist of at least 7 characters.</p>
                             </td>
                         </tr>
                         <tr>
                             <td>Password</td>
                             <td>
                                 <input type="password" class="password" autocomplete="new-password"
-                                    placeholder="Password...">
+                                    placeholder="New password...">
                             </td>
                         </tr>
                         <tr>
                             <td>Password (again)</td>
                             <td><input type="password" class="confirm" autocomplete="new-password"
-                                    placeholder="Confirm password..."></td>
+                                    placeholder="Confirm new password..."></td>
                         </tr>
                     </table>
 
